src/test/lab5/valid/Simple.slac
class Fact {
    method computeFactorial(num : Int) : Int = {
        num
    }
}

method main() : Unit = {
    println(strOf("f" + "oo" == "fo" + "o"));
    println(strOf(new Fact() == new Fact()))
}
