src/test/lab5/invalid/OverloadedPlus2.slac
method main(): Unit = {
  // Error: Type error: Expected one of the following types: Int, String, found: Bool
  println(true + "test")
}
